# weathercam

./: .env-sample  .gitignore  Dockerfile  README.md  build.sh  deploy.sh  pyproject.toml  requirements.txt  snap.py  test_history.py  weathercam.py
.claude/: settings.json
ecowitt/: api.py
static/: style.css
templates/: google_analytics.html  posthog_analytics.html  weathercam.html
